--- a/aglio.html
+++ b/aglio.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orto</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Sigmar&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -15,10 +18,8 @@
     </header>
 
     <div class="container">
+        <h1>Aglio</h1>
         <div class="section">
-            <a href="aglio.html" class="card">
-                <img src="images/Aglio.png" alt="Aglio">
-            </a>
             <h2>Germinazione</h2>
             <p>Bulbi di aglio germinati in ammollo in acqua(sostenuti da un piatto di plastica).  La germinazione è inizata giorno 17/02/25 e terminata giorno 24/02/25. 3 bulbi su 4 sono sopravissuti alla germinazione.</p>
             <img src="images/GerminazioneAglio1.png" alt="Germinazione">
