--- a/aglio.html
+++ b/aglio.html
@@ -31,7 +31,7 @@
         </div>
         <div class="section">
             <h2>Piantagione</h2>
-            <p>I bulbi germinati sono stati piantati giorno 24/02/25 in un balcone esposto ad EST, con irrigazione a giorni alterni.</p>
+            <p>I bulbi germinati sono stati piantati giorno 24/02/25 in un balcone esposto ad EST, con irrigazione 2 volte a settimana.</p>
             <img src="images/PiantagioneAglio1.png" alt="Piantagione">
         </div>
         <div class="section">
