--- a/aglio.html
+++ b/aglio.html
@@ -33,6 +33,8 @@
             <h2>Piantagione</h2>
             <p>I bulbi germinati sono stati piantati giorno 24/02/25 in un balcone esposto ad EST, con irrigazione 2 volte a settimana.</p>
             <img src="images/PiantagioneAglio1.png" alt="Piantagione">
+            <p>Inizio dei germogli</p>
+            <img src="images/PiantagioneAglio2.png" alt="Piantagione">
         </div>
         <div class="section">
             <h2>Raccolto</h2>
