--- a/cipolle.html
+++ b/cipolle.html
@@ -35,6 +35,8 @@
             <p>I semi sono stati piantati giorno 24/02/25 in un balcone esposto a EST. La piant viene irrigata solo quando il terreno appare non appare umido,poichè ama terrreni secchi ma odia ristagni d'acqua.</p>
             <img src="images/PiantagioneCipolle1.png" alt="Piantagione">
             <img src="images/PiantagioneCipolle2.png" alt="Piantagione">
+            <p>Inizio dei germogli</p>
+            <img src="images/PiantagioneCipolle3.png" alt="Piantagione">
         </div>
         <div class="section">
             <h2>Raccolto</h2>
