--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </a>
     </header>
 
-    <div class="container">
-        <a href="aglio.html" class="card">
+    <div class="container-home">
+        <a href="aglio.html" class="card-home">
             <img src="images/Aglio.png" alt="Aglio">
             <span>Aglio</span>
         </a>
-        <a href="cipolle.html" class="card">
+        <a href="cipolle.html" class="card-home">
             <img src="images/Cipolle.png" alt="Cipolle">
             <span>Cipolle</span>
         </a>
